ArgusWeb/app/css/main.css
/*! Copyright (c) 2016, Salesforce.com, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
 *
 *      Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
 *
 *      Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *
 *      Neither the name of Salesforce.com nor the names of its contributors may be used to endorse or promote products derived from this software
 *      without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. */
body {padding-top: 65px;}

label {
    display: inline-block;
    padding-top: 5px;
}

a:hover {text-decoration:none; color:inherit;}

ul {margin-bottom:0;}
ul li {list-style:none;}

button[disabled] {color:#CCC;}

.floatL {float:left;}
.floatR {float:right;}
.error, .error:focus {color:#C10101; border-color:#C10101; box-shadow:none;}
.pointer {cursor:pointer;}

.glyphicon.glyphicon-search {margin-right:.5em; padding:6px; border:solid 1px #CCC; border-radius:5px; font-size:20px; color:#599BD9; background-color:#EEE;}
.glyphicon.glyphicon-search:hover {color:#2C4386;}

.eyeIcon {display:inline-block; width:14px; height:14px; vertical-align:middle;}
.eyeIcon.open {background:url(../img/glyphicons-halflings.png) -96px -121px no-repeat;}
.eyeIcon.closed {}

.resetIcon {display:inline-block; width:25px; height:25px; background:url(../img/reset-icon-sm.png) 0 0 no-repeat; vertical-align:bottom;}
.resetIcon:hover {background-position:0 -37px;}

/* loading spinner small, eg input field */
.loading {border-color:#777; background:url(../img/spin.gif) 97% center no-repeat;}

#navbar li.activeTab {border-left: solid 1px #DDD; border-right: solid 1px #DDD; background-color: #FFF; color:#444; font-weight:bold;}
#navbar li a.glyphicon {font-size:20px; color:#777;}

/* Common drop down menu */
.topMenu {position:relative; margin-right:.5em;}
.topMenu ul.subMenu {display:none; position:absolute;}
.topMenu ul.subMenu li {margin:5px 0; padding:2px 7px;}
.topMenu ul.subMenu li:hover {background-color:#EEE;}
.topMenu ul.subMenu a:hover {text-decoration:none;}
.topMenu:hover ul.subMenu {display:block;}

#navbar ul.subMenu {top:40px; right:4px; padding:0;}
#navbar ul.subMenu li {text-align:right;}

/* drop down common panel */
.menuPanel {
  border-radius:5px;
  box-shadow:2px 2px 3px 0px #EEE;
  list-style:none;
  border:solid 1px #CCC;
  background:#FFF;
  z-index:9;
}

.breadcrumb {
  position:absolute;
  display:inline-block;
  margin:10px 0 0 0;
  padding:0 0 5px 0;
  background-color:#FFF;
  font-size:16px;
}
.breadcrumb > li + li:before {display:none;}

.nav {margin-top: 10px; margin-bottom: 15px;}
.navbar-fixed-top .nav {margin-top: 0; margin-bottom: 0;}

.h3 {margin-top: 10px;}
h3.bcTitle {margin:11px 0 0 35px; font-size:18px;}
h5.bcDesc {margin-bottom:20px; font-weight:normal;}

.rowIndicator {position:relative; margin-bottom:.5em;}
.serviceItem {position:absolute; top:9px; z-index:9; padding:1em 1em 1.5em 1em; width:110px; border:solid 1px #CCC; border-radius:5px; text-align:center; vertical-align:top}
.rowIndicator.largeLabel .serviceItem {padding:.5em 1em;}
.serviceItem .serviceName {margin-bottom:.5em; font-size:14px; font-weight:bold;}
.serviceItem .statusIndicator {display:inline-block; width:15px; height:15px; border:solid 1px; border-radius:10px;}
.serviceItem .statusIndicator.red {background-color:red; border-color:red;}
.serviceItem .statusIndicator.orange {background-color:orange; border-color:orange;}
.serviceItem .statusIndicator.green {background-color:green; border-color:green;}
.smallChart {padding-left:9em; width:100%;}

.loadingSpinner {position:relative; margin:100px auto; width:80px; height:80px; content:url(../img/ajax-loader.gif);}

/* metrics & discovery lookup */
.metricFields {width:35%; margin-top:.5em;}
.metricFields, .metricFields .form-control {margin:0 2em .5em 0;}

/* main graph/chart - i.e. metrics */
#graphContainer {margin:1.5em auto 0; min-width:310px; height:400px;}

/* autocomplete */
.autoComplete .category {padding:4px; border:1px solid #71ABCE; border-radius:5px; font-size:11px;}

/* btn last */
.btn-last {
    border-left: none;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

/* checkbox for date control */
.GMT-select {padding: 3px;}

/* Growl settings */
.growl-container.growl-fixed.top-center {
    top : 2em !important;
    width: 25% !important;
    max-width: 50% !important;
    text-align: center;
}

.growl-container > .growl-item {padding-right:0 !important;}

.pagination {margin:0 !important;}

.table-header-rotated th.row-header {width:auto;}

.table-header-rotated td{
  width: 40px;
  border-top: 1px solid #ddd;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  vertical-align: middle;
  text-align: center;
}

.table-header-rotated th.rotate-45{
  height: 140px;
  width: 50px;
  min-width: 40px;
  max-width: 50px;
  position: relative;
  vertical-align: bottom;
  padding: 0;
  font-size: 12px;
  line-height: 0.8;
}

.table-header-rotated th.rotate-45 > div{
  position: relative;
  top: 12px;
  left: 70px; /* 80 * tan(45) / 2 = 40 where 80 is the height on the cell and 45 is the transform angle*/
  height: 100%;
  -ms-transform:skew(-45deg,0deg);
  -moz-transform:skew(-45deg,0deg);
  -webkit-transform:skew(-45deg,0deg);
  -o-transform:skew(-45deg,0deg);
  transform:skew(-45deg,0deg);
  overflow: hidden;
  border-left: 1px solid #dddddd;
  border-right: 1px solid #dddddd;
  border-top: 1px solid #dddddd;
}

.table-header-rotated th.rotate-45 span {
  -ms-transform:skew(45deg,0deg) rotate(315deg);
  -moz-transform:skew(45deg,0deg) rotate(315deg);
  -webkit-transform:skew(45deg,0deg) rotate(315deg);
  -o-transform:skew(45deg,0deg) rotate(315deg);
  transform:skew(45deg,0deg) rotate(315deg);
  position: absolute;
  bottom: 65px; /* 40 cos(45) = 28 with an additional 2px margin*/
  left: -35px; /*Because it looked good, but there is probably a mathematical link here as well*/
  display: inline-block;
  // width: 100%;
  width: 160px; /* 80 / cos(45) - 40 cos (45) = 85 where 80 is the height of the cell, 40 the width of the cell and 45 the transform angle*/
  text-align: left;
  // white-space: nowrap; /*whether to display in one line or not*/
  word-wrap: break-word;
}

/* vertical align table cells */
.table > thead > tr > th,
.table > tbody > tr > th,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > tbody > tr > td,
.table > tfoot > tr > td {vertical-align: middle;}

.table th:hover {cursor:pointer;}

.search-bar .dropdown-menu {
    margin: 0 0 0 0;
    border-radius: 0px 0px 4px 4px;
    width: calc(100% - 47px - 40px);
    max-height: 300px;
    overflow: scroll;
}

/* chart styles */
.chartTitle {margin-top:0; margin-bottom:0; text-align:center;}

/* main elements */
.chartContainer {margin:2em .5em 0 0; padding-top:1em; border:solid 2px #CCC; border-radius:5px; background:#FFF;}
.lineChartToolbar {margin-left:3em;}

/** Toolbars */
.topToolbar {padding:0 3.5em;}
.topToolbar a {cursor:pointer;}
.topToolbar .invisDiv {visibility:hidden; display:inline-block; width:1px; height:28px;}

.toolbarItem {display:inline-block;}

.toolbarMenu {display:inline-block; white-space:nowrap;}
.toolbarMenu a.glyphicon {font-size:18px; color:#999;}
.toolbarMenu a.glyphicon:hover {color:inherit;}

.chartMenu li label {font-weight:400; font-size:13px;}

/* legend & other graph menus */
.toolbarItem.legend {padding:5px 5px 5px 8px; height:28px;}
.legend.floatPanel {overflow:hidden; width:99%;}
.legend.floatPanel.open {
  overflow:auto; position:absolute; padding-left:.5em; width:auto; height:300px; z-index:9;
  border:solid 1px #CCC; border-radius:5px; background-color:#FFF; box-shadow:1px 1px 2px 0px #CCC;
}

.toolbarItem .graphControls {margin:4px 10px 0 0;}
.graphControls .subMenu {right:-1em;}

.dateRange {float:right; margin:7px 2em 0 0; font-size:12px; color:#999;}

.axis path,
.axis line {fill:none; stroke:#FFF; shape-rendering:crispEdges;}

.x.axis path {display:none;}
.xBrush.axis path {display:none;}

.line {fill:none; stroke:steelblue; stroke-width:1.5; } /*clip-path: url('#clip');*/

.brushLine {fill:none; stroke:steelblue; stroke-width:1.5;}

.chartOverlay {fill:none; stroke:#CCC; pointer-events:all; cursor:crosshair;}

.focus circle {opacity:0.5;}

/* dotted line on main line graph */
.crossLine {fill:none; stroke:#066EEA; stroke-width:1px; stroke-dasharray:3,3;}
.crossLineTipRect {fill:#FFF; stroke:#066EEA; stroke-width:1px;}
.crossLineTip {font-size:12px;}

.tick line {stroke: lightgrey;}
.tick text {fill:#606060;}

/* grid line */
.grid line {stroke:lightgrey; opacity:0.7;}

.grid text {visibility:hidden;}
.grid path {stroke:#FFF;}

/* timeline graph */
g.brush rect.selection {stroke:#666;}
g.brush rect.overlay {stroke:#CCC;}
g.brush rect.handle {fill:#999; stroke:#333;}

/* flags (annotations) */
.flagItem .flag {fill:lightblue; stroke:steelblue; stroke-width:2px;}

/* tooltip stuff */
.tooltip rect {fill:#F1F1F1; stroke:steelblue; opacity:0.9;}
g.tooltip-items text {color: #444; font-size: 12px;}
g.tooltip-items circle {opacity: 0.7;}
g.tooltip-items text .timestamp {font-variant: small-caps;}
g.tooltip-items text .value {font-weight: 600; font-size: 14px;}

/* for charts in table */
ag-dashboard table {width: 100%; table-layout:fixed;}

